--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
                         </a>
                         <p>Password Checker</p>
                     </div>
-
+                    <div class="item">
+                        <a href="https://studio.code.org/projects/spritelab/h7y5FnOxsh3G4RR0pe8udWHNbYhm5maVvIc2PjF-RwQ" target="_blank">
+                           <img src="game5.png">
+                        </a>
+                        <p>Ping Pong Multiplayer</p>
+                    </div>
                 </div>
 
                 <!-- Left and right controls -->
